
- mssql
    - Added in a new MSGenericBinary type. This maps to the Binary
      type so it can implement the specialized behavior of treating
      length specified types as fixed-width Binary types and
      non-length types as an unbound variable length Binary type.

    - Added in new types: MSVarBinary and MSImage. [ticket:1249]

    - Added in the MSReal and MSNText types.

- bugfixes, behavioral changes
- general
- orm
    - Exceptions raised during compile_mappers() are now
      preserved to provide "sticky behavior" - if a hasattr()
      call on a pre-compiled mapped attribute triggers a failing 
      compile and suppresses the exception, subsequent compilation 
      is blocked and the exception will be reiterated on the 
      next compile() call.  This issue occurs frequently
      when using declarative.

    - Custom comparator classes used in conjunction with 
      column_property(), relation() etc. can define 
      new comparison methods on the Comparator, which will
      become available via __getattr__() on the 
      InstrumentedAttribute.   In the case of synonym()
      or comparable_property(), attributes are resolved first
      on the user-defined descriptor, then on the user-defined
      comparator.
      
    - Added ScopedSession.is_active accessor. [ticket:976]
    
    - Can pass mapped attributes and column objects as keys
      to query.update({}).  [ticket:1262]
      
    - Mapped attributes passed to the values() of an 
      expression level insert() or update() will use the 
      keys of the mapped columns, not that of the mapped 
      attribute.
      
    - Corrected problem with Query.delete() and
      Query.update() not working properly with bind 
      parameters. [ticket:1242]

    - Query.select_from(), from_statement() ensure
      that the given argument is a FromClause,
      or Text/Select/Union, respectively.

    - Query() can be passed a "composite" attribute